--- a/mmn11/q1/makefile
+++ b/mmn11/q1/makefile
@@ -1,5 +1,5 @@
 mmn11Q1: my_string.o
-	gcc -g -ansi -pedantic -Wall my_string.o -o q1
+	gcc -g -ansi -pedantic -Wall my_string.c -o q1
 
 my_string.o: my_string.c
 	gcc -c my_string.c -o my_string.o
