added more comments

--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,13 @@
 Test
 Test.dSYM/
 count_bits.dSYM/
-my_set.dSYM/
+my_set.dSYM
+../ler
+../fibon.DYSM
+../fibon.dSYM/
+../fibonacci_handler
+../fibonacci_handler.dSYM/
+../ler
+Learn/info.txt
+Learn/lr_run
+mmn23/Learn
